# trl_SFTTrainer

./: .gitignore  README.md  check_fa2.py  debug_main.py  main.py  pyproject.toml
scripts/: run.sh  run_EA.sh  run_P2.sh  run_thunder1.sh  slurm.sh
scripts/old/: run_EA.sh  run_P2.sh
src/: _arguments.py  data.py  model.py  setup.py
src/chat_templates/: pystr_to_jinja.py  qwen3.pystr  qwen3_gen-tagged.jinja  qwen3_gen-tagged_nothink.jinja
src/configs/: config.yaml  config2.yaml  config3.yaml  config_no_assi_only_loss.yaml  config_nochat.yaml  config_onlychat.yaml  config_qwenbase.yaml  config_v2_compare.yaml  config_v2_lr2e-5.yaml  config_v2_lr5e-5.yaml  config_v2_lr5e-6.yaml
