[project]
name = "trl-sfttrainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "deepspeed>=0.18.6",
    "flash-attn>=2.8.3",
    "hydra-core>=1.3.2",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "trl>=0.28.0",
    "wandb>=0.25.0",
]
